# el_shop

./: .gitignore  main.py  pyproject.toml
el_shop_class/: el_shop_class.py  items_class.py
test_class/: conftest.py  test_class.py  test_corrupted.csv  test_items.py  test_phone.py
