[tool.poetry]
name = "el-shop"
version = "0.1.0"
description = ""
authors = ["DSulzhits <dsulzhits@gmail.com>"]
readme = "README.md"
packages = [{include = "el_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
pytest-html-reporter = "^0.2.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
